determineStation method has been fixed